--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -50,6 +50,11 @@
     color: green;
 }
 
+.wrong {
+    color: red;
+    text-decoration: line-through;
+}
+
 .score div {
     font-family: monospace;
     font-size: xx-large;
