--- a/app/views/score.scala.html
+++ b/app/views/score.scala.html
@@ -1,4 +1,4 @@
-@(total: Int, correct: Int, score: Double, elapsedTime: String)(implicit requestHeader: RequestHeader)
+@(total: Int, correct: Int, score: Double, elapsedTime: String)
 
 @main(s"Score") {
     <div class="header">
