Added all three quizzes to the index page.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,8 @@
 @()
 
-@main("Welcome to the Amateur Extra Sample Exam") {
-  <h1>Welcome to the Amateur Extra sample exam!</h1>
-  <h2><a href="/start">Start the exam.</a></h2>
+@main("Welcome to the Amateur Sample Exam") {
+  <h1>Welcome to the Amateur sample exam!</h1>
+  <h2><a href="/startTech">Start the Technician exam.</a></h2>
+  <h2><a href="/startGen">Start the General exam.</a></h2>
+  <h2><a href="/startExtra">Start the Amateur Extra exam.</a></h2>
 }
