--- a/app/views/score.scala.html
+++ b/app/views/score.scala.html
@@ -10,5 +10,5 @@
         <div>Score: @score</div>
         <div>Elapsed time: @elapsedTime</div>
     </div>
-    <button class="button" onclick="window.location.href = '/start';">Start again.</button>
+    <button class="button" onclick="window.location.href = '/';">Start again.</button>
 }
