--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,7 +4,10 @@
 }
 
 .figure {
-    float: right;
+    margin-top: 1em;
+    margin-bottom: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .title {
