--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,8 +1,8 @@
 @()
 
-@main("Welcome to the Amateur Sample Exam") {
-  <h1>Welcome to the Amateur sample exam!</h1>
-  <h2><a href="/startTech">Start the Technician exam.</a></h2>
-  <h2><a href="/startGen">Start the General exam.</a></h2>
-  <h2><a href="/startExtra">Start the Amateur Extra exam.</a></h2>
+@main("Welcome to the Ham Quiz") {
+  <h1>Welcome to the Ham Quiz!</h1>
+  <h2><a href="/startTech">Start the sample Technician exam.</a></h2>
+  <h2><a href="/startGen">Start the sample General exam.</a></h2>
+  <h2><a href="/startExtra">Start the sample Amateur Extra exam.</a></h2>
 }
